; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_send_peer_kill.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_send_peer_kill.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@PEER_KILL_ID = common dso_local global i32 0, align 4
@PACKET_ID_DIRECT_GROUPCHAT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32, i32)* @send_peer_kill to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_peer_kill(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [1 x i32], align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @PEER_KILL_ID, align 4
  %9 = getelementptr inbounds [1 x i32], [1 x i32]* %7, i64 0, i64 0
  store i32 %8, i32* %9, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @PACKET_ID_DIRECT_GROUPCHAT, align 4
  %15 = load i32, i32* %6, align 4
  %16 = getelementptr inbounds [1 x i32], [1 x i32]* %7, i64 0, i64 0
  %17 = call i32 @send_packet_group_peer(i32 %12, i32 %13, i32 %14, i32 %15, i32* %16, i32 4)
  ret i32 %17
}

declare dso_local i32 @send_packet_group_peer(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
